--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.env.sample
+myenv/
 
 # Spyder project settings
 .spyderproject
@@ -168,3 +170,4 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+.env.sample
